[package]
name = "stab_module"
version = "0.1.0"
edition = "2021"

[dependencies]
scrypto = { version = "1.2.0" }
scrypto_math = { git = "https://github.com/ociswap/scrypto-math", branch = "main", version = "0.6.0" }
scrypto_avltree = { git = "https://github.com/ociswap/scrypto-avltree", version = "1.2.0" }

[dev-dependencies]
scrypto-test = { version = "1.2.0" }
dummy_token_pool = { path = "./dummy_token_pool", features = ["test"] }

[profile.release]
opt-level = 'z'        # Optimize for size.
lto = true             # Enable Link Time Optimization.
codegen-units = 1      # Reduce number of codegen units to increase optimizations.
panic = 'abort'        # Abort on panic.
strip = true           # Strip the symbols.
overflow-checks = true # Panic in the case of an overflow.

[features]
default = []
test = []

[lib]
crate-type = ["cdylib", "lib"]

[workspace]
# Set the package crate as its own empty workspace, to hide it from any potential ancestor workspace
# Remove this [workspace] section if you intend the package to be part of a Cargo workspace