[package]
name = "dummy_token_pool"
version = "1.0.0"
edition = "2021"

[dependencies]
scrypto = { version = "1.2.0" }

[dev-dependencies]
scrypto-test = { version = "1.2.0" }
dummy_token_pool = { path = ".", features = ["test"] }

[profile.release]
opt-level = 'z'        # Optimize for size.
lto = true             # Enable Link Time Optimization.
codegen-units = 1      # Reduce number of codegen units to increase optimizations.
panic = 'abort'        # Abort on panic.
strip = true           # Strip the symbols.
overflow-checks = true # Panic in the case of an overflow.

[features]
default = []
test = []

[lib]
crate-type = ["cdylib", "lib"]